TGR-1395: parse POP3 response body to SMIME messages